# azure-foundry-ai-evaluator-py

./: .env.example  .env.test  .gitignore  .prettierignore  LICENSE  LICENSES  README copy.md  README.md  TODO.md  poe_tasks.toml  pyproject.toml  pytest.ini  requirements.pipx.txt  requirements.uv.tool.txt  ruff.toml  test-results.xml
.github/workflows/: always.yml
assets/examples/turn_on_the_light__3_turns/03_runs/01/02_responses_json/: 01.json  02.json  03.json
assets/examples/turn_on_the_light__3_turns/03_runs/01/03_evaluations/03/01_results/: evaluation_results.jsonl
assets/examples/turn_on_the_light__3_turns/03_runs/01/03_evaluations/04/01_results/: evaluation_results.jsonl
assets/examples/turn_on_the_light__3_turns__1_conversation/01_ground_truth_jsons/: 01.json5
assets/examples/turn_on_the_light__3_turns__1_conversation/02_ground_truth_jsonl/: conversations.jsonl
src/ai_evaluator/: main.py
src/ai_evaluator/config/: configuration.py  logs.py
src/ai_evaluator/config/os_environ/: azure_openai.py  settings.py
src/ai_evaluator/dependency_injection/: container.py
src/ai_evaluator/models/conversation/: conversation.py  message_protocol.py
src/ai_evaluator/models/single_turn/: ground_truth_entry_protocol.py
tests/: conftest.py
tests/config/logs_/: test_LoggingConfig_fileConfig.py
tests/config/os_environ/azure_openai/: test_AzureOpenAISettings_dotenv.py
tests/config/os_environ/settings/: test_Settings_dotenv.py
tests/dependency_injection/container/: test_container.py
(+1 files in other folders)
